fix side scrollbar

--- a/src/componant/Articles/articles.scss
+++ b/src/componant/Articles/articles.scss
@@ -2,7 +2,7 @@
   width: 85%;
   margin: auto;
   margin-bottom: 75px;
-  padding: 0 10% 20px;
+  padding: 0 0 20px 5%;
   .-figure{
     max-height: 300px;
     padding: 10px 0;
